fix: update count on mobile

--- a/src/pages/Page.scss
+++ b/src/pages/Page.scss
@@ -65,8 +65,12 @@
         color: $color-white;
         pointer-events: none;
         @media screen and (max-width: $large-phone) {
-            z-index: 1;
+            z-index: 2;
             bottom: 0;
+            width: 100%;
+            left: 0%;
+            text-align: center;
+            bottom: 10%;
         }
     }
 
