--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,8 @@
     height: 100vh;
     width: 100vw;
 
+    height: calc(var(--vh, 1vh) * 100);;
+
     @media screen and (min-width: $max-desktop) {
         display: flex;
         flex-direction: column;
